--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <div class="block-comp-info">
                 <h1 class="comp-name">Айболит круглосуточная ветклиника</h1>
                 <a href="#">ЗАПИСАТЬСЯ</a>
+                <p class="phone-number-media">+7 (8442) 96 22 92</p>
                 <div class="comp-info-social">
                     <a href="#"><img src="img/main-icons/inst-main.svg" alt="inst"></a>
                     <a href="#"><img src="img/main-icons/fb-main.svg" alt="facebook"></a>
@@ -107,12 +108,12 @@
                      </a>
                 </div>
                 <div class="services-card">
-                    <a href="#"></a>
+                    <a href="#">
                         <div class="services-card-info">
                             <div class="services-card-title">Дерматология</div>
                             <div class="services-card-subtitle">
                                 <p>26 услуг</p>
-                                <i class="service-icons icon-service-icon5"></i>
+                                <i class="service-icons icon-service-icon10"></i>
                             </div>
                         </div>
                     </a>
@@ -287,9 +288,15 @@
         </div>
     </section>
     <section class="work-time-section">
-        <h1>1 150 000</h1>
-        <p>питомцам мы помогли за 18 лет работы</p>
-        <img src="img/bird-img.svg" alt="bird">
+        <div class="work-time-section-info">
+            <h1>1 150 000</h1>
+            <div class="work-time-section-text">
+                <p>питомцам мы помогли за 18 лет работы</p>
+            </div>
+            <div class="bird-img">
+                <img src="img/bird-img.svg" alt="bird">
+            </div>
+        </div>
     </section>
     <section class="advantages-section">
         <div class="advantages-section-container">
@@ -441,8 +448,8 @@
                     <div class="map-card">
                         <img src="img/contacts-map.svg" alt="map"> 
                         <a class="yandex-location-link" href="#">
-                                <p>Как добраться?</p>
-                                <img src="img/yandeks-map-marker.svg" alt=""> 
+                            <p>Как добраться?</p>
+                            <img src="img/yandeks-map-marker.svg" alt=""> 
                         </a>    
                     </div>
                 </div>
